--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,34 @@
     transform: rotate(360deg);
   }
 }
+
+.MovieForm {
+  width: 500px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.MovieForm h1 {
+  text-align: center;
+}
+
+.MovieForm .form-data {
+  display: flex;
+  justify-content: center;
+  margin: 5px 0;
+}
+
+.MovieForm .form-data label {
+  display: inline-block;
+  width: 75px;
+  margin-right: 10px;
+  text-align: left;
+}
+
+.MovieForm .form-data input:not([type="submit"]) {
+  flex-grow: 1;
+}
+
+.MovieForm .txt-area {
+  justify-content: space-evenly;
+}
